# yoink

./: .gitignore  README.md  pyproject.toml
src/yoink/: main.py
src/yoink/static/: clip.html  index.html
